# infosec-plugins

./: .gitignore  GOAL.md  README.md  RUN.md
.agents/plugins/: api_marketplace.json  marketplace.json
plugins/darkweb-osint/: .mcp.json  README.md  pyproject.toml
plugins/darkweb-osint/.codex-plugin/: plugin.json
plugins/darkweb-osint/robin_mcp/: __init__.py  health.py  scrape.py  search.py  server.py
plugins/pentest-recon/.codex-plugin/: plugin.json
plugins/pentest-recon/skills/recon-methodology/: SKILL.md
plugins/pentest-report/.codex-plugin/: plugin.json
plugins/pentest-report/skills/report-writing/: SKILL.md
plugins/scope-guard/.codex-plugin/: plugin.json
plugins/scope-guard/skills/authorized-use/: SKILL.md
plugins/web-app-testing/.codex-plugin/: plugin.json
plugins/web-app-testing/skills/web-app-testing/: SKILL.md
plugins/web-nuclei/: .mcp.json
plugins/web-nuclei/.codex-plugin/: plugin.json
