[project]
name = "robin-mcp"
version = "0.1.0"
description = "Headless Tor dark-web search/scrape MCP server. Engine lifted from robin (MIT)."
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31",
    "PySocks>=1.7",
    "beautifulsoup4>=4.12",
    "mcp>=1.2",
]

[project.scripts]
darkweb-mcp = "robin_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["robin_mcp"]
